--- a/arch/arm64/configs/alifep1pro_defconfig
+++ b/arch/arm64/configs/alifep1pro_defconfig
@@ -2558,6 +2558,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
+CONFIG_DYNAMIC_FSYNC=y
 CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
